refactor: standardize validation patterns and exception handling across services